build updates for 16.4.1 edex